Foundational drag/drop functionality

--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -9,6 +9,11 @@
 
 @import '../../components/variables.css';
 
+td {
+    min-width: 400px;
+    border: 1px solid black;
+}
+
 .root {
   padding-left: 20px;
   padding-right: 20px;
